@@ -4,6 +4,7 @@ git-annex (4.20130622) UNRELEASED; urgency=low
   * assistant: Daily sanity check thread is run niced.
   * bup: Handle /~/ in bup remote paths.
     Thanks, Oliver Matthews
+  * fsck: Ensures that direct mode is used for files when it's enabled.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 21 Jun 2013 13:16:17 -0400
 
